<resources>
    <string name="app_name">Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_trails">Расписание пригородного и междугородного транспорта</string>
    <string name="from">Откуда</string>
    <string name="where">Куда</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="date">Дата</string>
    <string name="any">любой</string>
    <string name="found">Найти</string>
    <string name="nothing_found">Ничего не нашлось =(</string>
</resources>